deployments/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest
  labels:
    app: rest
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
        - name: rest
          image: docker.io/dairlair/rest:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
          readinessProbe:
            httpGet:
              path: /readyz
              port: 80
          resources:
            limits:
              cpu: 10m
              memory: 30Mi
            requests:
              cpu: 10m
              memory: 30Mi
      terminationGracePeriodSeconds: 5
