deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest
  labels:
    app: rest
spec:
  type: LoadBalancer
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: rest
