deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
  labels:
    app: rest
  name: rest
spec:
  backend:
    serviceName: rest
    servicePort: 80
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: rest
              servicePort: 80
